@@ -4,6 +4,7 @@
 2. If URL contains 'dndPolyfill=0' then always disable polyfill, likewise
    always enable if URL has 'dndPolyfill=1'
 3. Fix subtitle links when 'Group all lists by release type' is enabled.
+4. Show user-defined roles in 'Advanced search'
 
 5.3.3
 -----
